opmerkingen na feedback toegepast part 1

--- a/bachproef/VanDorpeLukasBP.tex
+++ b/bachproef/VanDorpeLukasBP.tex
@@ -165,6 +165,8 @@
     \acro{FAQ}{Frequently Asked Questions}
     \acro{XLSX}{Excel Spreadsheet}
     \acro{AI}{Artificial Intelligence}
+    \acro{NFC}{Near-field communication}
+    \acro{RFID}{Radio-frequency identification}
 \end{acronym}
 
 %---------- Kern ---------------------------------------------------------------
