--- a/bachproef/inleiding.tex
+++ b/bachproef/inleiding.tex
@@ -5,7 +5,7 @@
 \chapter{\IfLanguageName{dutch}{Inleiding}{Introduction}}%
 \label{ch:inleiding}
 
-In de evenementenbranche wordt er steeds meer beroep gedaan op vernieuwde technologieën om het gebruiksgemak van de bezoekers te vergroten en de veiligheid te garanderen. Denk aan contactloze betalingen aan de hand van NFC chips en QR-codes om toegangskaartjes te scannen. Het veilig opbergen van persoonlijke spullen kan vanaf nu ook gemoderniseerd worden. Het bedrijf Lockit Rentals heeft hiervoor in 2022 QR-code lockers ontworpen en geïntroduceerd. Met die unieke QR-code kunnen klanten hun persoonlijke spullen veilig opbergen en de locker onbeperkt openen voor een vaste opgelegde periode. De problemen ontstaan als de toegangscode die voorgesteld wordt als een QR-code niet meer uitgelezen kan worden of wanneer de klant zijn/haar QR-code verliest.
+In de evenementenbranche wordt er steeds meer beroep gedaan op vernieuwde technologieën om het gebruiksgemak van de bezoekers te vergroten en de veiligheid te garanderen. Denk aan contactloze betalingen aan de hand van \ac{NFC} chips en QR-codes om toegangskaartjes te scannen. Het veilig opbergen van persoonlijke spullen kan vanaf nu ook gemoderniseerd worden. Het bedrijf Lockit Rentals heeft hiervoor in 2022 QR-code lockers ontworpen en geïntroduceerd. Met die unieke QR-code kunnen klanten hun persoonlijke spullen veilig opbergen en de locker onbeperkt openen voor een vaste opgelegde periode. De problemen ontstaan als de toegangscode die voorgesteld wordt als een QR-code niet meer uitgelezen kan worden of wanneer de klant zijn/haar QR-code verliest.
 
 \newpage
 
@@ -31,7 +31,7 @@ Zoals al aangegeven in sectie \ref{sec:probleemstelling} zal dit onderzoek zich 
 
 \subsection{Deelonderzoeksvragen}}
 
-Om de hoofdonderzoeksvraag verder op te splitsen, kunnen we ook nog enkele deelvragen stellen.
+Om de hoofdonderzoeksvraag verder op te splitsen, kunnen we ook nog enkele deelvragen stellen.f
 
 \begin{itemize}
     \item Welke gebruikte technieken kan de scanbaarheid en de nauwkeurigheid van toegangscodes verhogen om de onbemande uitbatingen positief te beïnvloeden?
