--- a/bachproef/methodologie.tex
+++ b/bachproef/methodologie.tex
@@ -44,7 +44,7 @@ Graag zou ik willen verwijzen naar de verkregen resultaten van het experiment wa
 
 Het zoeken naar een betere en snellere QR-code scanner software of hardware zal de snelheid van het scannen verhogen. Om een betrouwbare vergelijking te maken tussen de originele werkwijze en de nieuwe QR-code scanner, gaan de experimenten opnieuw uitgevoerd worden. Hierdoor kunnen we de resultaten van beide methoden op een nauwkeurige manier vergelijken en kan er tot een weloverwogen conclusie gekomen worden. In het hoofdstuk dat zich richt op de verwerking van de resultaten, zal dan ook uitvoerig worden ingegaan op de verschillen en overeenkomsten tussen de twee manieren van scannen bij een locker unit.
 
-\section{Chatbot requirements Analyse}%
+\section{Chatbot requirements analyse}%
 \label{sec:chatbotRequirment}
 
 Het ontwikkelen en integreren van een chatbot in een mobiele applicatie is een complex proces. Er zijn talrijke opties om een chatbot te ontwikkelen, echter moet er rekening gehouden worden met het effectieve gebruik. Om de doeleinden goed in kaart te brengen is er aan de hand van alle doeleinden een requirements analyse opgesteld samen met het bestuur van Lockit Rentals. Hierbij zijn alle opties goed afgewogen en de doeleinden opgesomd.
