--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -20,7 +20,7 @@ Er zijn verschillende manieren om smart locker systemen te gaan produceren. Hier
     \item Spieken is mogelijk waardoor er risico is tot diefstal    
 \end{itemize}
 
-\textbf{Rfid Badge:}
+\textbf{\ac{RFID} badge:}
 \begin{itemize}
     \item Kan verloren gaan
     \item Manuele verkoop mogelijk
