--- a/bachproef/verwerkingresultaten.tex
+++ b/bachproef/verwerkingresultaten.tex
@@ -50,7 +50,7 @@ Uit de experimenten met de beschadigd QR-codes kunnen we het volgende concludere
 
 Door het gebruik van een zeer recent chatbot platform zijn er tijdens ontwikkeling een paar obstakels opgedoken. Aangezien dit platform onlangs een volledige hervorming heeft doorstaan, was dit moeilijk om de juiste informatie te vinden hoe een chatbot ontwikkeld kan worden in BotPress. De documentatie over het gebruik was omslachtig en heel basisgericht. 
 
-Zoals al aangegeven in de sectie x van Proof-Of-Concept heb ik kunnen aantonen dat een chatbot op een gebruiksvriendelijke en handige manier de verloren QR-codes kan genereren. De herstelmail wordt weergegeven in figuur \ref{fig:resultatEmailQR-code}. De chatbot is ook in staat om informatie terug te geven naar believen van de eindgebruiker. Het is echter zeer moeilijk om de gebruiker zijn vragen te capteren en de eindgebruiker naar het juiste keuzemenu te leiden. Hieronder zijn de negatieve en postieve punten opgesomd op basis van mijn ontwikkelingstijd en ervaringen op het platform.
+Zoals al aangegeven in de sectie \ref{sec:stappenChatbot} van Proof-Of-Concept heb ik kunnen aantonen dat een chatbot op een gebruiksvriendelijke en handige manier de verloren QR-codes kan genereren. De herstelmail wordt weergegeven in figuur \ref{fig:resultatEmailQR-code}. De chatbot is ook in staat om informatie terug te geven naar believen van de eindgebruiker. Het is echter zeer moeilijk om de gebruiker zijn vragen te capteren en de eindgebruiker naar het juiste keuzemenu te leiden. Hieronder zijn de negatieve en postieve punten opgesomd op basis van mijn ontwikkelingstijd en ervaringen op het platform.
 
 Het eerste pluspunt dat ik dit platform kan geven is de manier waarop het gebouwd is en welke integratiemogelijkheden dit aanbiedt. Eén van de requirments gaf aan dat de chatbot zich onafhankelijk moest situeren. Het platform dient als eindpunt en heeft niets te maken met de huidige operaties in het locker verhuur proces. Een tweede pluspunt is de eigenschap van eigengeschreven code uit te voeren waar en wanneer je dit wilt. Dit gegeven is zeldaam als er gekeken wordt naar grote technologiegiganten op vlak van geautomatiseerde chatbots. 
 Het ontwikkelen van een chatbot puur voor specifieke acties zoals het terughalen van QR-codes zou ook uitgevoerd kunnen worden aan de hand van een versimpeld formulier. Door het gebruik van een betere en grotere techniek dan nodig, laten we de mogelijkheid open om aan uitbreidingen te doen. Een volgend positief element is de manier van integratie tussen verschillende services. Deze mogelijkheden waren zeer goed uitgewerkt en gedocumenteerd waardoor integratie vlekkeloos verliep. Door deze pijlers mee te nemen in onderzoek en ontwikkeling impliceert dit onze gemaakte keuze van de tool BotPress.
