todo's + opmerkingen part 2

--- a/bachproef/methodologie.tex
+++ b/bachproef/methodologie.tex
@@ -15,8 +15,6 @@ Zoals bij de start van elk onderzoek is het verwerven van allerhande informatie 
 
 Als de informatie verwerkt is, kunnen beschikbare opties voor mogelijke oplossingen bekeken en aangeboden worden. Om deze fase zo goed mogelijk te vervolledigen moeten de requirements verzameld en geanalyseerd worden. De requirements zorgen voor een duidelijke afbakening. Uit de voorop gestelde eisen zal volgen welke technologieën geschikt zijn om de probleemstelling op te lossen. Nadien volgt een uitwerking met bijhorende experimenten die terug te vinden zijn in het hoofdstuk van de praktische Proof-Of-Concept.
 
-%TODO: onderverdeling herbekijken met titels
-
 \section{QR-code scanner requirments analyse}%
 \label{sec:scannerRequirment}
 
@@ -38,9 +36,7 @@ De factoren en omgevingen die veranderen doorheen het experiment:
     \item Beschadigde QR-code     
 \end{itemize}
 
-%TODO: verwijzen naar juiste verwerkingsresultaten
-
-Graag zou ik willen verwijzen naar de verkregen resultaten van het experiment waarbij de originele werkwijze voor het uitlezen van QR-codes is toegepast \ref{ch:verwerkingresultaten}. Deze resultaten bieden waardevolle inzichten in het functioneren van de oorspronkelijke methode en vormen een belangrijke referentie voor het vergelijken van de prestaties van nieuwe QR-code scanner.
+Graag zou ik willen verwijzen naar de verkregen resultaten van het experiment waarbij de originele werkwijze voor het uitlezen van QR-codes is toegepast \ref{sec:resultatenQR-codeScanners}. Deze resultaten bieden waardevolle inzichten in het functioneren van de oorspronkelijke methode en vormen een belangrijke referentie voor het vergelijken van de prestaties van nieuwe QR-code scanner.
 
 Het zoeken naar een betere en snellere QR-code scanner software of hardware zal de snelheid van het scannen verhogen. Om een betrouwbare vergelijking te maken tussen de originele werkwijze en de nieuwe QR-code scanner, gaan de experimenten opnieuw uitgevoerd worden. Hierdoor kunnen we de resultaten van beide methoden op een nauwkeurige manier vergelijken en kan er tot een weloverwogen conclusie gekomen worden. In het hoofdstuk dat zich richt op de verwerking van de resultaten, zal dan ook uitvoerig worden ingegaan op de verschillen en overeenkomsten tussen de twee manieren van scannen bij een locker unit.
 
@@ -58,10 +54,8 @@ Voor het maken van een chatbot die festivalgangers helpt bij het terugwinnen van
 
 Het is namelijk mogelijk om een chatbot zonder service te ontwikkelen maar toch heb ik gekozen om met een online service te werken. Dit biedt ons voordelen zoals technische ondersteuning, makkelijke integratie met andere systemen en snellere ontwikkelingstijd \autocite{Mercir2022} \autocite{folstad2021investigating}. De technologie van een chatbot zonder service leren en beheersen inclusief het maken van een geïntegreerd systeem dat operationeel moet zijn tegen en bepaalde einddatum is onhaalbaar. Hiervoor heb ik onderzoek gedaan naar een online chatbot platvorm die een combinatie weergeeft van beide. Hierdoor kunnen we een eenvoudige chatbot maken en integreren in een nieuw systeem in een heel korte tijdspanne. Echter kunnen we bij specifiekere gebruiksscenario’s de bot uitbreiden op vlak van functionaliteit. Het platform laat ons toe om eigen gespecialiseerde code te schrijven en uit te voeren doorheen het chatproces van de festivalganger. 
 
-%TODO: referenctie goedleggen naar juist hoofdstuk
-
-Na het maken van deze keuze, ben ik aan de slag gegaan met het uitwerken van de chatbot. Bij ontwikkeling hebben we ons gericht op een duidelijke gebruikersinterface die makkelijk gehanteerd kan worden door de eindgebruiker. Hoe deze chatbot is opgebouwd kan u vinden in \ref{ch:Proof-Of-Concept}. Aangezien gewerkt wordt met een online service waarvan de integratiemogelijkheden goed opgebouwd zijn, is de live chatbot al in de Lockit Rentals applicatie geïntegreerd. Later kan er ook nog geopteerd worden om deze chatbot te integreren in hun eigen Facebookpagina of andere sociale media platformen. 
-Tot slot verwijs ik graag naar het resultaat van de chatbot \ref{ch:verwerkingresultaten}. De nieuwe chatbot kan nu succesvol QR-codes recupereren en de gevraagde informatie weergeven.
+Na het maken van deze keuze, ben ik aan de slag gegaan met het uitwerken van de chatbot. Bij ontwikkeling hebben we ons gericht op een duidelijke gebruikersinterface die makkelijk gehanteerd kan worden door de eindgebruiker. Hoe deze chatbot is opgebouwd kan u vinden in \ref{sec:OntwikkelingChatbot}. Aangezien gewerkt wordt met een online service waarvan de integratiemogelijkheden goed opgebouwd zijn, is de live chatbot al in de Lockit Rentals applicatie geïntegreerd. Later kan er ook nog geopteerd worden om deze chatbot te integreren in hun eigen Facebookpagina of andere sociale media platformen. 
+Tot slot verwijs ik graag naar het resultaat van de chatbot \ref{sec:resultatenChatbot}. De nieuwe chatbot kan nu succesvol QR-codes recupereren en de gevraagde informatie weergeven.
 
 
 
