--- a/bachproef/samenvatting.tex
+++ b/bachproef/samenvatting.tex
@@ -2,7 +2,7 @@
 %% Samenvatting
 %%=============================================================================
 
-% TODO: De "abstract" of samenvatting is een kernachtige (~ 1 blz. voor een
+% De "abstract" of samenvatting is een kernachtige (~ 1 blz. voor een
 % thesis) synthese van het document.
 %
 % Een goede abstract biedt een kernachtig antwoord op volgende vragen:
